--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -45,7 +45,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v3
 
-      - run: yarn
+      - run: yarn install --frozen-lockfile
       - run: yarn build --base=/$(basename "$GITHUB_REPOSITORY")
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
