--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
-      - run: yarn
+      - run: yarn install --frozen-lockfile
       - run: yarn build --base=/$(basename "$GITHUB_REPOSITORY")
