--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,4 +30,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
       - run: yarn install --frozen-lockfile
+      - run: yarn format
+      - run: yarn lint
       - run: yarn build --base=/$(basename "$GITHUB_REPOSITORY")
