--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test-all": "run-p build format lint"
   },
   "dependencies": {
     "@fluent/bundle": "^0.18.0",
@@ -34,6 +35,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "npm-run-all2": "^6.0.5",
     "prettier": "^2.8.8",
     "typescript": "^5.1.3",
     "vite": "^4.3.9"
