--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fluent/react": "^0.15.1",
     "@reduxjs/toolkit": "^1.9.5",
     "chart.js": "^4.3.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
