--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fluent/react": "^0.15.2",
     "@reduxjs/toolkit": "^2.6.1",
     "chart.js": "^4.4.8",
+    "chartjs-plugin-annotation": "^3.1.0",
     "classnames": "^2.5.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
