--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "wouter": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.12",
