--- a/package.json
+++ b/package.json
@@ -29,18 +29,19 @@
     "wouter": "^3.7.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.4.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.2.1",
-    "@typescript-eslint/eslint-plugin": "^8.45.0",
-    "@typescript-eslint/parser": "^8.45.0",
     "@vitejs/plugin-react": "^5.0.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^6.1.1",
+    "globals": "^16.4.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.0",
     "vite": "^7.1.9"
   }
 }
